(executable
 (name day1)
 (libraries
  core
 )
 (modules day1)
)

(executable
 (name day2)
 (libraries
  core
 )
 (modules day2)
)

(executable
 (name day3)
 (libraries
  core
 )
 (modules day3)
)

(executable
 (name day4)
 (libraries
  core
 )
 (modules day4)
)

(executable
 (name day5)
 (libraries
  core str
 )
 (modules day5)
)

(executable
 (name day6)
 (libraries
  core
 )
 (modules day6)
)
